backend/migration_error.log
E:\Final Project (Full-stack)\Sheet\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
scripts/migrateMongoToMysql.ts(15,3): error TS2353: Object literal may only specify known properties, and 'datasourceUrl' does not exist in type 'Subset<PrismaClientOptions, PrismaClientOptions>'.

    at createTSError (E:\Final Project (Full-stack)\Sheet\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (E:\Final Project (Full-stack)\Sheet\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (E:\Final Project (Full-stack)\Sheet\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (E:\Final Project (Full-stack)\Sheet\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (E:\Final Project (Full-stack)\Sheet\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1936:10
    at Object.require.extensions.<computed> [as .ts] (E:\Final Project (Full-stack)\Sheet\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2353 ]
}
